[project]
name = "mlutils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"  # Narrow this to 3.10 - 3.13
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0,<2.2.0",  # Added cap for Numba/OpenCV compatibility
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0,<1.7.0",  # Added cap for sklearn-compat
	 "packaging<25",
    "pillow<12"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

